# otel-trace-adapter

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: adapter.py  example.py  main.py  tracer_factory.py
